@@ -1,3 +1,8 @@
+Fri Nov  4 00:52:21 CET 2011 (acab)
+-----------------------------------
+ * libclamav/pe.c: parse vinfo where varfileinfo occours before stringfileinfo
+		   (bb#3062)
+
 Fri Mar  2 19:48:36 CET 2012 (tk)
 ---------------------------------
  * clamd: add support for on-access scanning on OS X with ClamAuth (beta)
